base library (mixr_base)

- All addresses in network handler classes have been updated to type std::string
  as opposed to char*.  Also all of classes in which this matters that define a
  slot parameter for that address also accepts Identifiers to specific host
  names.  Strings are still used to specify IP addresses, so no native type exist
  for that.

   -------------------
   - Network classes -
   -------------------

   PosixHandler class
      1) Slot parameter 'localIpAddress' now accepts both a String for IP addresses
         (e.g., "127.0.0.1") and Identifiers for addresses specified as hostnames
         (e.g., 'localhost')
      2) Internally, 'localIpAddress' is now stored as a std::string
      3) Slot parameter 'shared' now accepts a Boolean

   TcpClient class
      1) Slot parameter 'ipAddress' now accepts both a String and Identifier with
         the same functionality as PosixHandler class changes
      2) Internally, 'ipAddress' is now stored as a std::string

   UdpBroadcastHandler class
      1) Internally, 'networkMask' is now being stored as a std::string
   
   UdpMulticastHandler class
      1) Internally, 'multicastGroup' is now being stored as a std::string
      2) Slot parameter 'loopback' now accepts a Boolean

   UdpUnicastHandler class
      1) Slot parameter 'ipAddress; now accepts both a String and Identifier with
         the same functionality as PosixHandler class changes
      2) Internally, ipAddr is now being stored as a std::string

   -------------------
   - Other classes -
   -------------------

   Boolean class
      1) This class has been refactored and it now based on Object.  It is
         no longer a subclass to Number.

   Component class
      1) Slot parameters 'enableTimingStats', 'printTimingStats', and
         'freeze' now accept a Boolean

   Identifier class
      1) This class is no longer a subclass of String.  It provides a complete