@@ -4,7 +4,7 @@
 #include "mixr/base/colors/Cie.hpp"
 #include "mixr/base/numeric/Float.hpp"
 #include "mixr/base/List.hpp"
-#include "mixr/base/functors/Table1.hpp"
+#include "mixr/base/relations/Table1.hpp"
 #include <cstdio>
 
 namespace mixr {
