@@ -5,7 +5,7 @@
 #include "mixr/base/numeric/Number.hpp"
 
 #include "mixr/base/units/angle_utils.hpp"
-#include "mixr/base/functors/Table1.hpp"
+#include "mixr/base/relations/Table1.hpp"
 
 #include "mixr/base/numeric/Boolean.hpp"
 #include "mixr/base/numeric/Number.hpp"
