@@ -7,7 +7,7 @@
 #include "mixr/models/IrQueryMsg.hpp"
 
 #include "mixr/base/List.hpp"
-#include "mixr/base/functors/Table1.hpp"
+#include "mixr/base/relations/Table1.hpp"
 #include "mixr/base/numeric/Number.hpp"
 
 #include "mixr/base/util/nav_utils.hpp"
