@@ -7,9 +7,9 @@
 #include "mixr/models/IrQueryMsg.hpp"
 
 #include "mixr/base/List.hpp"
-#include "mixr/base/functors/Table2.hpp"
-#include "mixr/base/functors/Table3.hpp"
-#include "mixr/base/functors/Table4.hpp"
+#include "mixr/base/relations/Table2.hpp"
+#include "mixr/base/relations/Table3.hpp"
+#include "mixr/base/relations/Table4.hpp"
 #include "mixr/base/numeric/Number.hpp"
 
 #include "mixr/base/units/Distances.hpp"
