@@ -8,9 +8,9 @@
 
 #include "mixr/models/WorldModel.hpp"
 
-#include "mixr/base/functors/Table2.hpp"
-#include "mixr/base/functors/Table4.hpp"
-#include "mixr/base/functors/Table5.hpp"
+#include "mixr/base/relations/Table2.hpp"
+#include "mixr/base/relations/Table4.hpp"
+#include "mixr/base/relations/Table5.hpp"
 #include "mixr/base/List.hpp"
 #include "mixr/base/numeric/Number.hpp"
 #include "mixr/base/units/Areas.hpp"
